# CardioSeg

./: .dockerignore  .gitignore  Cardiac_MRI_Guide.md  Cardiac_MRI_Plan.md  CardioSeg_Deployment_Plan.md  CardioSeg_Progress.md  Dockerfile  README.md  app.py  app_dev.py  app_guide.py  benchmark_all.py  compile_tensorrt.bat  evaluate_cca.py  export_onnx.py  generate_comparison_chart.py  generate_slices.py  inspect_data.py  requirements.txt  run_docker.bat  run_tensorrt_inference.py  save_pytorch_output.py  train.py  train_hr.py  verify_augmentation.py  verify_clinical_impact.py  verify_dataset.py  verify_gpu.py  visualize_aug_cases.py  visualize_preprocessing.py  visualize_tuning.py
assets/: accuracy_metrics.txt  tensorrt_compile_log.txt  test_input.npy
src/: dataset.py  dataset_hr.py  model.py  model_hr.py
src/cpp/: CMakeLists.txt  demo.cpp  inference_engine.cpp  inference_engine.h
